<resources>
    <string name="app_name">AppBook</string>
    <string name="image_description">Image</string>
    <string name="are_you_sure_delete_book_message">Are you sure you want to delete this book?</string>
    <string name="book_add_message">Book added correctly</string>
    <string name="library_add_message">Library added correctly</string>
    <string name="delete_book_title">Delete book</string>
    <string name="are_you_sure_delete_library_message">Are you sure you want to delete this library?</string>
    <string name="delete_library_message">Delete library</string>
    <string name="are_you_sure_publisher_delete_message">Are you sure you want to delete this publisher?</string>
    <string name="delete_publisher_title">Delete publisher</string>
    <string name="choose_location_message">Choose a location</string>
    <string name="error_message">An error has occurred. Check the data and try again.</string>
    <string name="publisher_add_message">Publisher added correctly</string>
    <string name="are_you_sure_modify_book_message">Are you sure you want to modify this book?</string>
    <string name="modify_book_title">Modify book</string>
    <string name="are_you_sure_modify_library_message">Are you sure you want to modify this library?</string>
    <string name="modify_library_title">Modify library</string>
    <string name="are_you_sure_modify_publisher_message">Are you sure you want to modify this publisher?</string>
    <string name="modify_publisher_title">Modify publisher</string>
    <string name="book_name_label">Book name</string>
    <string name="year_edition_book_label">Year Edition</string>
    <string name="page_number_book_label">Pages number</string>
    <string name="description_label">Description</string>
    <string name="add_button">Add</string>
    <string name="foto_button">Foto</string>
    <string name="cancel_button">Cancel</string>
    <string name="name_library_label">Library name</string>
    <string name="city_library_label">City</string>
    <string name="zip_code_library_label">Zip Code</string>
    <string name="phone_label">Phone</string>
    <string name="name_publisher_label">Publisher name</string>
    <string name="checkbox_read">Read</string>
    <string name="return_button">Return</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="main_menu_title">What do you want to manage?</string>
    <string name="books">Books</string>
    <string name="libraries">Libraries</string>
    <string name="publishers">Publishers</string>
    <string name="confirm_button">Confirm</string>
    <string name="see_button">See</string>
    <string name="modify_button">Modify</string>
    <string name="delete_button">Delete</string>
    <string name="add_book_actionbar">Add book</string>
    <string name="add_library_actionbar">Add library</string>
    <string name="see_maps">See maps</string>
    <string name="add_publisher_actionbar">Add publisher</string>
    <string name="library">Library</string>
    <string name="publisher">Publisher</string>
</resources>